[package]
name = "zmem"
repository = "https://github.com/xeome/zmem"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0"
description = "Zmem is a Linux memory monitoring program that displays detailed information about virtual memory."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
colored = "2.1.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }

[profile.release]
lto = "thin"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.5.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "upload"
